--- a/Translations/German/text-infos-change.xml
+++ b/Translations/German/text-infos-change.xml
@@ -561,6 +561,10 @@
 		<Translation>Führe Offenbarung ein</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_GOAL_GNOSTICISM</zType>
+		<Translation>Führe Gnostizismus ein</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_GOAL_ENLIGHTENMENT</zType>
 		<Translation>Führe Erleuchtung ein</Translation>
 	</Entry>
